PipewireSourceItem: handle explicit invalidation

When a window is closed releaseResources is not called, instead a
faux-virtual invalidateSceneGraph is called on the render thread. We
should perform cleanup directly.

BUG: 494138