src/pipewiresourceitem.h
@@ -103,6 +103,9 @@ public:
 
     [[nodiscard]] QRectF paintedRect() const;
 
+public Q_SLOTS:
+    void invalidateSceneGraph(); // called via metaobject from QQuickWindow
+
 Q_SIGNALS:
     void nodeIdChanged(uint nodeId);
     void fdChanged(uint fd);
